--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.3'
-        classpath 'com.twitter:util-core_2.10:6.23.0'
-        classpath 'com.google.android:android:4.1.1.4'
-        classpath 'com.google.android:support-v4:r7'
-        classpath 'com.google.android:android-test:4.1.1.4'
-        classpath 'com.google.android:annotations:4.1.1.4'
-        classpath 'com.android.tools:common:24.1.3'
-        classpath 'com.android:common:r16'
-
-      
     }
 }
 
@@ -23,3 +14,23 @@ allprojects {
 }
 
 apply plugin: 'java'
+
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.twitter:hbc:2.2.0'
+    compile 'com.twitter:hbc-core:2.2.0'
+    compile 'com.twitter:hbc-twitter4j:2.2.0'
+    compile 'com.google.android:annotations:4.1.1.4'
+    compile 'com.twitter:util-core_2.10:6.23.0'
+    compile 'com.google.android:android:4.1.1.4'
+    compile 'com.google.android:support-v4:r7'
+    compile 'com.google.android:android-test:4.1.1.4'
+    compile 'com.google.android:annotations:4.1.1.4'
+    compile 'com.android.tools:common:24.1.3'
+    compile 'com.android:common:r16'
+    testCompile 'com.squareup:fest-android:1.0.8'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'com.google.android:android-test:4.1.1.4'
+    testCompile 'junit:junit:4.12'
+}
